# points

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  quadtree.rs
